# yudi

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  textwidget.rs  ui.rs  util.rs  weather.rs
